# torch-graph

./: CMakeLists.txt  DGL_test_code.py  GAT.cpp  GAT.h  GCN.cpp  GCN.h  ManagerWrap.cpp  ManagerWrap.h  README.md  Scatter_gather.cpp  Scatter_gather.h  SnapWrap.cpp  SnapWrap.h  batch_bfs.h  dcgan.cpp  generate_anathor_graph.py  main.cpp  new_cora_test.py  new_cora_test_dgl.py  one_time_DAG.py  page_rank.py  page_rank_tile.cpp  setup.py  test.py  test_GAT.py
GCN_python_copy/: GAT_test.py  GAT_test_multi_head.py  GCN_test.py  gat_multi_head.py  gatconv.py  graphconv.py  sparse.py
dcgan.egg-info/: PKG-INFO  SOURCES.txt
